[tool.poetry]
name = "mosaik"
version = "3.3.0"
description = "mosaik is a flexible smart-grid co-simulation framework"
authors = ["mosaik development team <mosaik@offis.de>"]
license = "LGPL-2.1-only"
readme = ["README.rst", "CHANGES.txt", "AUTHORS.txt"]
homepage = "https://mosaik.offis.de/"
repository = "https://gitlab.com/mosaik/mosaik"
documentation = "https://mosaik.readthedocs.io/"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent", 
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.8"
loguru = ">=0.6, <1"
networkx = "^2.5"
tqdm = "^4.64.1"
typing-extensions = "^4.5"
mosaik-api-v3 = "^3.0.9"

[tool.poetry.group.dev.dependencies]
flake8 = "3.7.9"
pep8 = "1.7.1"
pytest = "7.2.2"
pytest-cov = "^2.8.1"
pytest-benchmark = "^3.4.1"
pytest-asyncio = "^0.20.3"
tox = "^3.20.1"
icecream = "^2.1.3"

[tool.poetry.group.docs.dependencies]
sphinx = {version = "^7.2.5", python = "^3.9"}
sphinx-rtd-theme = "^1.3.0"
sphinx-toolbox = "^3.5.0"
mosaik-heatpump = "^1.0"

[tool.poetry.group.plotting.dependencies]
matplotlib = { version = "^3.8.2", markers = "python_version >= '3.9'" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
