[project]
name = "mosaik"
description = "mosaik is a flexible smart-grid co-simulation framework"
authors = [
    { name = "mosaik development team", email = "mosaik@offis.de" }
]
dependencies = [
    "mosaik-api-v3>=3.0.10",
    "loguru>=0.6",
    "networkx>=2.5",
    "tqdm>=4.66.4",
    "typing-extensions>=4.11.0",
]
readme = "README.rst"
license = { file = "LICENSE.txt" }
requires-python = ">= 3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://mosaik.offis.de/"
Repository = "https://gitlab.com/mosaik/mosaik"
Documentation = "https://mosaik.readthedocs.io/"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.2.1",
    "pytest-cov>=5.0.0",
    "pytest-benchmark>=4.0.0",
    "pytest-asyncio>=0.23.7",
    "hypothesis>=6.102.4",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["mosaik"]

[tool.hatch.build.targets.sdist]
packages = ["mosaik"]

[tool.pytest.ini_options]
markers = [
    "cmd_process: Contains a simulator started using cmd",
    "weak: Contains a weak connection"
]
xfail_strict = true
filterwarnings = [
    "error::pytest.PytestUnraisableExceptionWarning",
]
addopts = [
    "--doctest-glob='*.rst'"
]

[tool.pyright]
typeCheckingMode = "strict"
reportIncompatibleMethodOverride = "warning"
reportUninitializedInstanceVariable = "warning"
reportUnnecessaryIsInstance = "none"
reportUnusedImport = "warning"

[tool.ruff.lint]
extend-select = ["C", "W"]
